--- a/release/Makefile
+++ b/release/Makefile
@@ -1,4 +1,4 @@
-TESTFLIGHT_VER= 011a
+TESTFLIGHT_VER= 012a
 
 RELEASE=	mplus-TESTFLIGHT-${TESTFLIGHT_VER}
 
@@ -17,7 +17,14 @@ FONTS=	../work.d/targets/mplus-1p/black/mplus-1p-black.ttf \
 	../work.d/targets/mplus-2p/medium/mplus-2p-medium.ttf \
 	../work.d/targets/mplus-2p/regular/mplus-2p-regular.ttf \
 	../work.d/targets/mplus-2p/light/mplus-2p-light.ttf \
-	../work.d/targets/mplus-2p/thin/mplus-2p-thin.ttf
+	../work.d/targets/mplus-2p/thin/mplus-2p-thin.ttf \
+	../work.d/targets/mplus-1c/black/mplus-1c-black.ttf \
+	../work.d/targets/mplus-1c/heavy/mplus-1c-heavy.ttf \
+	../work.d/targets/mplus-1c/bold/mplus-1c-bold.ttf \
+	../work.d/targets/mplus-1c/medium/mplus-1c-medium.ttf \
+	../work.d/targets/mplus-1c/regular/mplus-1c-regular.ttf \
+	../work.d/targets/mplus-1c/light/mplus-1c-light.ttf \
+	../work.d/targets/mplus-1c/thin/mplus-1c-thin.ttf
 
 release: 
 	mkdir -p ${RELEASE}
