*** empty log message ***

--- a/release/Makefile
+++ b/release/Makefile
@@ -1,4 +1,4 @@
-TESTFLIGHT_VER= 043
+TESTFLIGHT_VER= 044
 
 RELEASE=	mplus-TESTFLIGHT-${TESTFLIGHT_VER}
 
@@ -57,7 +57,7 @@ release:
 	mkdir -p ${RELEASE}
 	cp -p $(FILES) ${RELEASE}
 	cp -p $(FONTS) ${RELEASE}
-	tar cvfz ${RELEASE}.tar.gz ${RELEASE}/
+#	tar cvfz ${RELEASE}.tar.gz ${RELEASE}/
 	tar cf - ${RELEASE}/ | xz -9 -c > ${RELEASE}.tar.xz
 	rm -rf ${RELEASE}
 
